2009-05-30  Thomas Sefzick <thse@users.sourceforge.net>

	* src/graph3d.c (do_3dplot):  Adjust position of 3D plot with
	'set view equal xyz' so that the center of rotation is at the center
	of the screen.
	Bugfix #2797226

2009-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Silence an escaped debug fprintf.  Bugfix.

2009-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: Broken format specifier.
	Bug #2750114

2009-05-05  Peter Gasparovic  (buteo@users.sourceforge.net)

	* term/PostScript/cp1250.ps:  Fix code points for Lcaron, lcaron.
	Bug #2785002

2009-05-05  Thomas Sefzick (thse@users.sourceforge.net)

	* term/pslatex.trm: 'set epslatex ... blacktext' was producing white
	text for tics labels, axis labels, key labels, but black title text.
	Bug #2750114

2009-04-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Filled boxes and filled polygons have different
	behaviour when the fillstyle is FS_DEFAULT, but the x11 driver was
	not making this distinction. (caused by patch of 2008-06-22).

2009-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	Release 4.2.5

2009-03-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Reserve room for user tic labels even if
	the format for autoticks is "".

	* src/set.c (load_tics) src/save.c (save_tics):  Do not save or restore
	axis tic labels that were read from a data file.
	Bug #2711994

2009-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Fix bug that caused the left/right margin
	offsets to be applied twice, leading to too-wide margins.
	Bug #2714997

2009-03-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history_list): Indexing istart from 1 otherwise
	"history" command (without arguments) does not work.

2009-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Fix breakage if configured --disable-binary-data-file
	(Lucas Hart)
